--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -118,9 +118,10 @@
                 <div id="policy_section" class="hidden">
                     <h2>Policies</h2>
                     <ul id="policy_list">
+                        <!--need to check for no reference number documents with the policy !- null-->
                         @foreach (var policy in ViewBag.PolicyNavBar)
                         {
-                            if (policy.Length >= 1)
+                            if (policy != null) 
                             {
                                 <li>
                                     <a href="@Url.Action("Index", "PublicVM", new
