--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -148,59 +148,38 @@ input:checked + .slider:before {
     background-color: rgba(237, 28, 36, 0.5);
 }
 
-/*Hides select columns when in subcategory - category*/
-/*.category tr th:nth-child(3n), .category tr td:nth-child(3n) {
-    display: none;
-}*/
-
-/*Hides select columns when in subcategory - doctype*/
-/*.doctype tr th:nth-child(1), .doctype tr th:nth-child(3), .doctype tr td:nth-child(1), .doctype tr td:nth-child(3){
-    display: none;
-}*/
-
-/*Hides select columns when in subcategory - policy*/
-/*.policy tr th:first-child, .policy tr td:first-child{
-    background: red;
-    display: none;
-}*/
-
-
-/*.category tr th:nth-child(-n+2), .category tr th:nth-child(10), .category tr th:nth-child(11) {
-    display: none;
-}*/
 
 /*show 1, 2, 10, 11*/
 /*hide 3, 4, 5, 6, 7, 8, 9, 12*/
-/*8, 7, 5, 3*/
-/*.category tr th:nth-child(3), .category tr td:nth-child(3), .category tr th:nth-child(4), .category tr td:nth-child(4), .category tr th:nth-child(5), .category tr td:nth-child(5), .category tr th:nth-child(6), .category tr td:nth-child(6), .category tr th:nth-child(7), .category tr td:nth-child(7), .category tr th:nth-child(8), .category tr td:nth-child(8), .category tr th:nth-child(9), .category tr td:nth-child(9), .category tr th:nth-child(12), .category tr td:nth-child(12) {
-    display: none;
-}*/
+/*Hides select columns when in subcategory - category*/
 .category tr th:nth-child(-3n + 12), .category tr td:nth-child(-3n + 12), .category tr th:nth-child(8), .category tr td:nth-child(8), .category tr th:nth-child(7), .category tr td:nth-child(7), .category tr th:nth-child(5), .category tr td:nth-child(5), .category tr th:nth-child(3), .category tr td:nth-child(3){
     display: none;
 }
 
 /*2, 10, 11, 12*/
 /*1, 3, 4, 5, 6, 7, 8, 9*/
-/*8, 6, 4*/
+/*Hides select columns when in subcategory - doctype*/
 .doctype tr th:nth-child(-2n+9), .doctype tr td:nth-child(-2n+9), .doctype tr th:nth-child(-4n+8), .doctype tr td:nth-child(-4n+8), .doctype tr th:nth-child(6), .doctype tr td:nth-child(6){
     display: none;
 }
 
 /*1, 2, 5, 10, 11, 12*/
 /*3, 4, 6, 7, 8, 9*/
-/*8, 7, 4*/
+/*Hides select columns when in subcategory - policy*/
 .policy tr th:nth-child(-3n+9), .policy tr td:nth-child(-3n+9), .policy tr th:nth-child(-4n+8), .policy tr td:nth-child(-4n+8), .policy tr th:nth-child(7), .policy tr td:nth-child(7) {
     display: none;
 }
 
 /*2, 3, 6, 7, 10, 11, 12*/
 /*1, 4, 5, 8, 9*/
+/*Hides select columns when in policy - correspondence*/
 .correspondence tr th:nth-child(-4n+9), .correspondence tr td:nth-child(-4n+9), .correspondence tr th:nth-child(-4n+8), .correspondence tr td:nth-child(-4n+8), .correspondence tr th:nth-child(9), .correspondence tr td:nth-child(9) {
     display: none;
 }
 
 /*2, 4, 5, 8, 9, 10, 11, 12*/
 /*1, 3, 6, 7*/
+/*Hides select columns when in doctype - declaration/endorsement*/
 .declaration tr th:nth-child(-3n+6), .declaration tr td:nth-child(-3n+6), .declaration tr th:nth-child(1), .declaration tr td:nth-child(1), .declaration tr th:nth-child(7), .declaration tr td:nth-child(7){
     display: none;
 }
