--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -26,7 +26,7 @@
                    }), "#public_table", "replace-with", "GET", "Issue Date", "fa-sort", "filterLink"))
                     </th>
                     <th>Method</th> <!--2-->
-                    <th>Policy# (RefNumber)</th> <!--3-->
+                    <th>Policy #</th> <!--3, sortable-->
                     <th> <!--4-->
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
                    {
@@ -37,15 +37,15 @@
                        searchTerm = TempData["SearchTerm"]
                    }), "#public_table", "replace-with", "GET", "Effective Date", "fa-sort", "filterLink"))
                     </th>
-                    <th>Type (DataType.Name)</th> <!--5-->
+                    <th>Document Type</th> <!--5-->
                     <th>Originator</th><!--6-->
                     <th>Reason</th><!--7-->
-                    <th>Supplier#</th><!--8-->
+                    <th>Supplier #</th><!--8-->
                     <th><!--9-->
                         @Html.DisplayNameFor(model => model.ToList().First().Description)
                     </th>
                     <th>File</th><!--10-->
-                    <th>...</th><!--11-->
+                    <th>More</th><!--11-->
                 </tr>
             </thead>
 
@@ -58,15 +58,27 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.IssueDate)
                     </td>
-                    <td>Method Stuff</td>
-                    <td>Policy #s</td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Method)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RefNumber)
+                    </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.EffectiveDate)
                     </td>
-                    <td>Types for DataTypeName</td>
-                    <td>Jackie Cheng</td>
-                    <td>B/c reasons</td>
-                    <td>Vincent Nguyen Company</td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DocumentTypeName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Originator)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Reason)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Supplier)
+                    </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
