--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -26,7 +26,16 @@
                    }), "#public_table", "replace-with", "GET", "Issue Date", "fa-sort", "filterLink"))
                     </th>
                     <th>Method</th> <!--2-->
-                    <th>Policy #</th> <!--3, sortable-->
+                    <th> <!--3, plug in-->
+                        @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
+                    {
+                        publicId = Model.First().Folder_ID,
+                        filter = "policy",
+                        subNav = ViewData["currentNav"],
+                        prevNav = ViewData["currentNavTitle"],
+                        searchTerm = TempData["SearchTerm"]
+                    }), "#public_table", "replace-with", "GET", "Policy #", "fa-sort", "filterLink"))
+                    </th> 
                     <th> <!--4-->
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
                    {
@@ -37,10 +46,30 @@
                        searchTerm = TempData["SearchTerm"]
                    }), "#public_table", "replace-with", "GET", "Effective Date", "fa-sort", "filterLink"))
                     </th>
-                    <th>Document Type</th> <!--5-->
-                    <th>Originator</th><!--6-->
+                    <th> <!--5, plug in-->
+                        Document Type
+                    </th> 
+                    <th><!--6, plug in-->
+                        @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
+                    {
+                        publicId = Model.First().Folder_ID,
+                        filter = "originator",
+                        subNav = ViewData["currentNav"],
+                        prevNav = ViewData["currentNavTitle"],
+                        searchTerm = TempData["SearchTerm"]
+                    }), "#public_table", "replace-with", "GET", "Originator", "fa-sort", "filterLink"))
+                    </th>
                     <th>Reason</th><!--7-->
-                    <th>Supplier #</th><!--8-->
+                    <th>
+                        @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
+                    {
+                        publicId = Model.First().Folder_ID,
+                        filter = "supplier",
+                        subNav = ViewData["currentNav"],
+                        prevNav = ViewData["currentNavTitle"],
+                        searchTerm = TempData["SearchTerm"]
+                    }), "#public_table", "replace-with", "GET", "Supplier #", "fa-sort", "filterLink"))
+                    </th><!--8-->
                     <th><!--9-->
                         @Html.DisplayNameFor(model => model.ToList().First().Description)
                     </th>
