--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -7,8 +7,7 @@
 <div id ="main-row" class="row">
     <nav id="public_navigation" class="navbar navbar-default col-md-2 hidden-sm hidden-xs">
 
-        <div class="row">
-
+        <div class="nav-button row">
             <div class="cat_pol_switcher col-md-12">
                 <h2>Category/Policy</h2>
                 <h1>@ViewBag.Example</h1>
@@ -22,7 +21,7 @@
         </div>
 
         <div class="nav_lists_outer row">
-            <div class="nav_lists col-md-2">
+            <div class="nav_lists col-md-12">
 
                 @* Need a better way to place this JS *@
                 <script type="text/javascript">
